--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,21 +1,14 @@
 <%- include ./partials/header %>
 
-    <h1> Hello </h1>
+    <h1> Welcome to your daily journal blog! </h1>
     <p><%= homeContent %></p>
-
-
-
 
     <% posts.forEach(function (post) { %>
         <h1><%= post.title %> </h1> 
         <p><%= post.content.substring(0,100) + "..." %>
-        <a href="/posts/<%=post.slug%>">Read More</a>
-
-
+        <a href="/posts/<%=post._id%>">Read More</a>
         </p> 
         
-
-
     <% }) %>
    
 <%- include ./partials/footer %>
