--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Have a good day! Chen &#x1F5A4;
+    <p>Have a good day! Chen &#x1F90E;
 </p>
   </div>
 </div>
